--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
-    
     "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
     "vuetify": "^2.5.8"
   },
   "devDependencies": {
